--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@nivo/core": "^0.87.0",
+    "@nivo/pie": "^0.87.0",
     "axios": "^1.6.8",
     "browser-image-compression": "^2.0.2",
     "moment": "^2.30.1",
