--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
+    "@mui/x-date-pickers": "^7.11.1",
     "@nivo/core": "^0.87.0",
     "@nivo/pie": "^0.87.0",
     "axios": "^1.6.8",
